BE/Aucation_chat/src/main/java/com/example/aucation_chat/common/error/WrongAccessException.java
package com.example.aucation_chat.common.error;

public class WrongAccessException extends ApplicationException {

    public WrongAccessException(ApplicationError error) {
        super(error);
    }
}
